--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Estilos generales */
+
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +12,6 @@ body {
     line-height: 1.6;
 }
 
-/* Header */
 #header {
     background-color: #111;
     color: white;
@@ -58,7 +57,6 @@ nav {
     color: #d447ff;
 }
 
-/* Banner Principal */
 #banner {
     background-image: url('/img/portada.jpg');
     background-size: cover;
@@ -69,7 +67,7 @@ nav {
     align-items: center;
     text-align: center;
     padding: 0 20px;
-    margin-top: 80px; /* Espacio para que no se superponga con el header */
+    margin-top: 80px; 
     position: relative;
     color: white;
 }
@@ -97,21 +95,19 @@ nav {
     transform: scale(1.05);
 }
 
-/* Galería */
 #galeria {
     padding: 40px;
     text-align: center;
 }
 
-/* Contenedor de la galería */
 .image-gallery {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columnas de igual ancho */
-    gap: 20px; /* Espacio entre las imágenes */
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
     margin-top: 30px;
 }
 
-/* Estilos para cada imagen en la galería */
+
 .coleccion {
     position: relative;
     overflow: hidden;
@@ -149,23 +145,23 @@ nav {
     opacity: 1;
 }
 
-/* Ajuste para pantallas más pequeñas */
+
 @media (max-width: 768px) {
     .image-gallery {
-        grid-template-columns: repeat(2, 1fr); /* 2 columnas en pantallas más pequeñas */
+        grid-template-columns: repeat(2, 1fr); 
     }
 }
 
 @media (max-width: 480px) {
     .image-gallery {
-        grid-template-columns: 1fr; /* 1 columna en pantallas muy pequeñas */
+        grid-template-columns: 1fr; 
     }
 }
 
 #contacto {
-    padding: 80px 20px 20px; /* Ajusta el padding superior para dejar espacio para el header */
+    padding: 80px 20px 20px; 
     margin: 0 auto;
-    background-color: #f9f9f9; /* Fondo suave */
+    background-color: #f9f9f9; 
     border-radius: 8px;
     max-width: 1200px;
 }
@@ -180,7 +176,7 @@ nav {
     margin-bottom: 20px;
 }
 
-/* Contact Info Styles */
+
 .contact-info {
     list-style: none;
     padding: 0;
@@ -197,13 +193,12 @@ nav {
     color: #333;
 }
 
-/* Button Styles */
 .schedule-appointment {
     display: inline-block;
     padding: 10px 20px;
     font-size: 1.1em;
     color: #fff;
-    background-color: #007bff;
+    background-color: #1d1d1d;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -216,7 +211,6 @@ nav {
     background-color: #d447ff;
 }
 
-/* Footer Activities Styles */
 .footer-activities {
     background-color: #fff;
     padding: 20px;
@@ -257,7 +251,6 @@ nav {
     margin: 5px 0 0;
     color: #555;
 }
-/* Footer */
 footer {
     background-color: #111;
     color: white;
@@ -315,7 +308,6 @@ footer {
     margin-right: 5px;
 }
 
-/* Estilos para las Actividades en el Footer */
 .footer-activities {
     margin-top: 20px;
 }
@@ -345,79 +337,6 @@ footer {
 .activity-info p {
     margin: 5px 0 0;
     font-size: 0.9em;
-}
-
-/* Estilos para el Lightbox */
-.lightbox {
-    display: none; /* Oculto por defecto */
-    position: fixed;
-    z-index: 999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro con opacidad */
-    align-items: center;
-    justify-content: center;
-}
-
-.lightbox-content {
-    position: relative;
-    max-width: 90%;
-    max-height: 80%;
-    margin: auto;
-}
-
-.lightbox-slides {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.lightbox-slides img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 24px;
-    transition: 0.6s ease;
-    cursor: pointer;
-    user-select: none;
-}
-
-.prev {
-    left: 0;
-}
-
-.next {
-    right: 0;
-}
-
-.prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.close {
-    position: absolute;
-    top: 10px;
-    right: 25px;
-    color: white;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.close:hover {
-    color: #d447ff;
 }
 
 @media (max-width: 768px) {
